tests/ui/const-generics/mgca/early-bound-param-lt-bad.stderr
error: generic parameters may not be used in const operations
  --> $DIR/early-bound-param-lt-bad.rs:9:30
   |
LL |     T: Trait<const { let a: &'a (); 1 }>
   |                              ^^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

